--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <nav class="nav-bar">
         <div class="left-side">
-            <img src="images/menu.png" alt="menu-icon">
+            <img src="images/menu-lines.png" alt="menu-icon">
             <img src="images/magnifying-glass.png" alt="search-icon">
             <span class="SC">SPACE & COSMOS</span>
         </div>
         <div class="nyc-logo">
             <img src="images/The-New-York-Times-icon.png" alt="NYC-logo">
         </div>
-        <div class="left-side">
+        <div class="right-side">
             <button>SUBSCRIBE NOW</button>
             <button>LOG IN</button>
         </div>
