header design: designed header wrapper and the head container

--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
     <title>Space Ripples Reveal Big Bang’s Smoking Gun</title>
 </head>
 <body>
-    <nav class="nav-bar">
-        <div class="left-side">
-            <img src="images/menu-lines.png" alt="menu-icon">
-            <img src="images/magnifying-glass.png" alt="search-icon">
-            <span class="SC">SPACE & COSMOS</span>
-        </div>
-        <div class="nyc-logo">
-            <img src="images/The-New-York-Times-icon.png" alt="NYC-logo">
-        </div>
-        <div class="right-side">
-            <button>SUBSCRIBE NOW</button>
-            <button>LOG IN</button>
-        </div>
-    </nav>
+    <div class="head-wrapper">
+        <header class="head-container">
+            <nav class="nav-bar">
+                <div class="left-side">
+                    <img src="images/menu-lines.png" alt="menu-icon">
+                    <img src="images/magnifying-glass.png" alt="search-icon">
+                    <span class="SC">SPACE & COSMOS</span>
+                </div>
+                <div class="nyc-logo">
+                    <img src="images/The-New-York-Times-icon.png" alt="NYC-logo">
+                </div>
+                <div class="right-side">
+                    <button>SUBSCRIBE NOW</button>
+                    <button>LOG IN</button>
+                </div>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
