almost done with the header and nav

--- a/index.html
+++ b/index.html
@@ -12,16 +12,20 @@
         <header class="head-container">
             <nav class="nav-bar">
                 <div class="left-side">
+                    <div class="img-container">
                     <img src="images/menu-lines.png" alt="menu-icon">
                     <img src="images/magnifying-glass.png" alt="search-icon">
-                    <span class="SC">SPACE & COSMOS</span>
+                    </div>
+                    <div class="SC">
+                    <span>SPACE & COSMOS</span>
+                </div>
                 </div>
                 <div class="nyc-logo">
-                    <img src="images/The-New-York-Times-icon.png" alt="NYC-logo">
+                    <img src="images/tnypic.png" alt="NYC-logo">
                 </div>
                 <div class="right-side">
-                    <button>SUBSCRIBE NOW</button>
-                    <button>LOG IN</button>
+                    <button class="btn">SUBSCRIBE NOW</button>
+                    <button class="btn">LOG IN</button>
                 </div>
             </nav>
         </header>
