--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
             <nav class="nav-bar">
                 <div class="left-side">
                     <div class="img-container">
-                    <img src="images/menu-lines.png" alt="menu-icon">
-                    <img src="images/magnifying-glass.png" alt="search-icon">
+                        <img src="images/menu-lines.png" alt="menu-icon">
+                        <img src="images/magnifying-glass.png" alt="search-icon">
                     </div>
-                    <div class="SC">
-                    <span>SPACE & COSMOS</span>
                 </div>
-                </div>
-                <div class="nyc-logo">
-                    <img src="images/tnypic.png" alt="NYC-logo">
+                <div class="SC abs"><span>SPACE & COSMOS</span></div>
+                <div class="nyc-logo abs">
+                    <a href="#" class="nyc-anc-tag">
+                        <img src="images/tnypic.png" alt="NYC-logo">
+                    </a>
                 </div>
                 <div class="right-side">
-                    <button class="btn">SUBSCRIBE NOW</button>
+                    <a href="#" class="subscribe">Subscribe for full access</a>
                     <button class="btn">LOG IN</button>
                 </div>
             </nav>
