--- a/index.html
+++ b/index.html
@@ -30,5 +30,27 @@
             </nav>
         </header>
     </div>
+
+    <!--End of header-->
+
+    <!--Beginning of main part-->
+
+    <main class="main-container">
+        <div class="heading-container">
+            <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
+        </div>
+        <div class="wrapper">
+            <figure class="big-image">
+            <img src="images/big-image.jpg" alt="Allan-Guth-picture">
+             </figure>
+
+             <figcaption class="caption">
+            <span class="words">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</span>
+            <br>
+            <span class="copyright">Rick Friedman for The New York Times</span>
+            </figcaption>
+        </div>
+        
+    </main>
 </body>
 </html>
