main title and figure done

--- a/index.html
+++ b/index.html
@@ -41,16 +41,36 @@
         </div>
         <div class="wrapper">
             <figure class="big-image">
-            <img src="images/big-image.jpg" alt="Allan-Guth-picture">
-             </figure>
-
-             <figcaption class="caption">
-            <span class="words">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</span>
-            <br>
-            <span class="copyright">Rick Friedman for The New York Times</span>
-            </figcaption>
+                <img src="images/big-image.jpg" alt="Allan-Guth-picture">
+                <figcaption class="caption">
+                    <span class="words">Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.</span>
+                    <br>
+                    <span class="copyright">Rick Friedman for The New York Times</span>
+                </figcaption>
+            </figure>
         </div>
-        
+        <div class="author-box">
+            <div class="author-container">
+                <div class="author-name">
+                    <p>By <a href="#"><span>Dennis Overbye</span></a></p>
+                </div>
+                <ul class="date_social-media">
+                    <li class="date">March 17, 2014</li>
+                    <li class="icons-box">
+                            <div class="list-icons">
+                                <ul class="list_icon_box">
+                                        <li><a href="#"><img src="images/fbk.png" alt="fb-icon"></a></li>
+                                        <li><a href="#"><img src="images/ttr.png" alt="twitter-icon"></a></li>
+                                        <li><a href="#"><img src="images/envelope.png" alt="envelope"></a></li>
+                                        <li><a href="#"><img src="images/share.png" alt="envelope"></a></li>
+                                        <li><a href="#"><img src="images/bookmark.png" alt="bookmark"></a></li>
+                                        <li><a href="#"><img src="images/chat.png" alt="chat"></a></li>
+                                </ul>
+                            </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
 </body>
 </html>
