fixed floating icon container

--- a/index.html
+++ b/index.html
@@ -57,16 +57,16 @@
                 <ul class="date_social-media">
                     <li class="date">March 17, 2014</li>
                     <li class="icons-box">
-                            <div class="list-icons">
+                           <!-- <div class="list-icons">-->
                                 <ul class="list_icon_box">
                                         <li><a href="#"><img src="images/fbk.png" alt="fb-icon"></a></li>
                                         <li><a href="#"><img src="images/ttr.png" alt="twitter-icon"></a></li>
                                         <li><a href="#"><img src="images/envelope.png" alt="envelope"></a></li>
                                         <li><a href="#"><img src="images/share.png" alt="envelope"></a></li>
-                                        <li><a href="#"><img src="images/bookmark.png" alt="bookmark"></a></li>
-                                        <li><a href="#"><img src="images/chat.png" alt="chat"></a></li>
+                                        <li class="plain"><a href="#"><img src="images/bookmark.png" alt="bookmark"></a></li>
+                                        <li class="plain"><a href="#"><img src="images/chat.png" alt="chat"></a></li>
                                 </ul>
-                            </div>
+                            <!-- </div> -->
                     </li>
                 </ul>
             </div>
