content story initiated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="heading-container">
             <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
         </div>
-        <div class="wrapper">
+        <div class="image-container">
             <figure class="big-image">
                 <img src="images/big-image.jpg" alt="Allan-Guth-picture">
                 <figcaption class="caption">
@@ -49,28 +49,30 @@
                 </figcaption>
             </figure>
         </div>
-        <div class="author-box">
-            <div class="author-container">
+        <section class="story-container">
+            <div class="story-box">
                 <div class="author-name">
                     <p>By <a href="#"><span>Dennis Overbye</span></a></p>
                 </div>
                 <ul class="date_social-media">
                     <li class="date">March 17, 2014</li>
                     <li class="icons-box">
-                           <!-- <div class="list-icons">-->
-                                <ul class="list_icon_box">
-                                        <li><a href="#"><img src="images/fbk.png" alt="fb-icon"></a></li>
-                                        <li><a href="#"><img src="images/ttr.png" alt="twitter-icon"></a></li>
-                                        <li><a href="#"><img src="images/envelope.png" alt="envelope"></a></li>
-                                        <li><a href="#"><img src="images/share.png" alt="envelope"></a></li>
-                                        <li class="plain"><a href="#"><img src="images/bookmark.png" alt="bookmark"></a></li>
-                                        <li class="plain"><a href="#"><img src="images/chat.png" alt="chat"></a></li>
-                                </ul>
-                            <!-- </div> -->
+                        <ul class="list_icon_box">
+                                <li class="bcd"><a href="#"><img src="images/fbk.png" alt="fb-icon"></a></li>
+                                <li class="bcd"><a href="#"><img src="images/ttr.png" alt="twitter-icon"></a></li>
+                                <li class="bcd"><a href="#"><img src="images/envelope.png" alt="envelope"></a></li>
+                                <li class="bcd"><a href="#"><img src="images/share.png" alt="envelope"></a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
-        </div>
+            <div class="story-box">
+                <p class="story">CAMBRIDGE, Mass. — One night late in 1979, an itinerant young physicist named Alan Guth, with a new son and a year’s appointment at Stanford, stayed up late with his notebook and equations, venturing far beyond the world of known physics.</p>
+                <p class="story">He was trying to understand why there was no trace of some exotic particles that should have been created in the Big Bang. Instead he discovered what might have made the universe bang to begin with. A potential hitch in the presumed course of cosmic evolution could have infused space itself with a special energy that exerted a repulsive force, causing the universe to swell faster than the speed of light for a prodigiously violent instant.</p>
+                <p class="story">If true, the rapid engorgement would solve paradoxes like why the heavens look uniform from pole to pole and not like a jagged, warped mess. The enormous ballooning would iron out all the wrinkles and irregularities. Those particles were not missing, but would be diluted beyond detection, like spit in the ocean.</p>
+                <p class="story">“SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.</p>
+            </div>
+        </section>
     </main>
 </body>
 </html>
