--- a/index.html
+++ b/index.html
@@ -76,6 +76,45 @@
                 <p class="story">Inflation has been the workhorse of cosmology for 35 years, though many, including Dr. Guth, wondered whether it could ever be proved.</p>
                 <p class="story">If corroborated, Dr. Kovac’s work will stand as a landmark in science comparable to the recent discovery of dark energy pushing the universe apart, or of the Big Bang itself. It would open vast realms of time and space and energy to science and speculation.</p>
                 <p class="story">Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.</p>
+                <p class="story strong">‘As Big as It Gets’</p>
+                <p class="story">In our own universe, it would serve as a window into the forces operating at energies forever beyond the reach of particle accelerators on Earth and yield new insights into gravity itself. Dr. Kovac’s ripples would be the first direct observation of gravitational waves, which, according to Einstein’s theory of general relativity, should ruffle space-time.</p>
+                <p class="story">Marc Kamionkowski of Johns Hopkins University, an early-universe expert who was not part of the team, said, “This is huge, as big as it gets.”</p>
+                <p class="story">He continued, “This is a signal from the very earliest universe, sending a telegram encoded in gravitational waves.”</p>
+                <p class="story">The ripples manifested themselves as faint spiral patterns in a bath of microwave radiation that permeates space and preserves a picture of the universe when it was 380,000 years old and as hot as the surface of the sun.</p>
+                <p class="story">Dr. Kovac and his collaborators, working in an experiment known as Bicep, for Background Imaging of Cosmic Extragalactic Polarization, reported their results in a scientific briefing at the Center for Astrophysics here on Monday and in a set of papers submitted to The Astrophysical Journal.</p>
+            </div>
+            <div class="image-container">
+                <div class="theory-box">
+                    <h3>The Theory of Inflation</h3>
+                    <p class="abstract">Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago. </p>
+                </div>
+                <div class="big-image">
+                    <img src="https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-945.png" alt="Theory of Inflation, image description">
+                    <div class="illus col-1">
+                        <p><span class="bold">The UNIVERSE</span> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                    </div>
+                    <div class="illus col-2">
+                        <p><span class="bold">NOT ENOUGH TIME</span> The universe is not old enough for light to have traveled the vast distance from one side of the universe to the other, and there has not been enough time for scattered patches of hot and cold to mix into an even temperature.</p>
+                    </div>
+                    <div class="illus col-3">
+                        <p><span class="bold">DISTANT COFFEE</span> At a smaller scale, imagine using a telescope to look a mile in one direction. You see a coffee cup, and from the amount of steam, you can estimate its temperature and how much it has cooled.</p>
+                    </div>
+                    <div class="illus col-4">
+                        <p><span class="bold">COFFEE EVERYWHERE</span> Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.</p>
+                    </div>
+                    <!-- <div class="illus col-5">
+                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                    </div>
+                    <div class="illus col-6">
+                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                    </div>
+                    <div class="illus col-7">
+                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                    </div>
+                    <div class="illus col-8">
+                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                    </div> -->
+                </div>
             </div>
         </section>
     </main>
