inflation theory container completed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h3>The Theory of Inflation</h3>
                     <p class="abstract">Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago. </p>
                 </div>
-                <div class="big-image">
+                <div class="big-image inflation">
                     <img src="https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-945.png" alt="Theory of Inflation, image description">
                     <div class="illus col-1">
                         <p><span class="bold">The UNIVERSE</span> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
@@ -102,18 +102,18 @@
                     <div class="illus col-4">
                         <p><span class="bold">COFFEE EVERYWHERE</span> Now turn around and look a mile in the other direction. You see a similar coffee cup, at exactly the same temperature. Coincidence? Maybe. But if you see a similar cup in every direction, you might want to look for another explanation.</p>
                     </div>
-                    <!-- <div class="illus col-5">
-                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                    <div class="illus col-5">
+                        <p><span class="bold">STILL NOT ENOUGH TIME</span>There has not been enough time to carry coffee cups from place to place before they get cold. But if all the coffee cups were somehow filled from a single coffee pot, all at the same time, that might explain their even temperature.</p>
                     </div>
                     <div class="illus col-6">
-                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                        <p><span class="bold">INFLATION</span>  solves this problem. The theory proposes that, less than a trillionth of a second after the Big Bang, the universe expanded faster than the speed of light. Tiny ripples in the violently expanding energy field eventually grew into the large-scale structures of the universe.</p>
                     </div>
                     <div class="illus col-7">
-                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
+                        <p><span class="bold">FLUCTUATION</span>  Astronomers have now detected evidence of these ancient fluctuations in swirls of polarized light in the cosmic background radiation, which is energy left over from the early universe. These are gravitational waves predicted by Einstein.</p>
                     </div>
                     <div class="illus col-8">
-                        <p><strong>The UNIVERSE</strong> is just under 14 billion years old. From our position in the Milky Way galaxy, we can observe a sphere that is now about 92 billion light-years across. But there's a mystery. Wherever we look, the universe has an even temperature.</p>
-                    </div> -->
+                        <p><span class="bold">EXPANSION </span>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot</p>
+                    </div>
                 </div>
             </div>
         </section>
