--- a/index.html
+++ b/index.html
@@ -114,7 +114,56 @@
                     <div class="illus col-8">
                         <p><span class="bold">EXPANSION </span>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot</p>
                     </div>
+                    <div class="figure-text">
+                        <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
+                    </div>
                 </div>
+            </div>
+            <div class="story-box">
+                <p class="story">Dr. Kovac said the chance that the results were a fluke was only one in 10 million.</p>
+                <p class="story">Dr. Guth, now 67, pronounced himself “bowled over,” saying he had not expected such a definite confirmation in his lifetime.</p>
+                <p class="story">“With nature, you have to be lucky,” he said. “Apparently we have been lucky.”</p>
+                <p class="story">The results are the closely guarded distillation of three years’ worth of observations and analysis. Eschewing email for fear of a leak, Dr. Kovac personally delivered drafts of his work to a select few, meeting with Dr. Guth, who is now a professor at Massachusetts Institute of Technology (as is his son, Larry, who was sleeping that night in 1979), in his office last week.</p>
+                <p class="story">“It was a very special moment, and one we took very seriously as scientists,” said Dr. Kovac, who chose his words as carefully as he tended his radio telescopes.
+
+                </p>
+                <p class="story">Andrei Linde of Stanford, a prolific theorist who first described the most popular variant of inflation, known as chaotic inflation, in 1983, was about to go on vacation in the Caribbean last week when Chao-Lin Kuo, a Stanford colleague and a member of Dr. Kovac’s team,<a href="#"> knocked on his door with a bottle of Champagne</a> to tell him the news.</p>
+            </div>
+            <div class="video-container">
+                <iframe class="video" title="youtube-video" src="https://www.youtube.com/embed/ZlfIVEy_YOA"></iframe>
+            </div>
+            <div class="figcapt">
+                <figcaption class="video-caption">
+                    <span>Stanford Professor Andrei Linde celebrates physics breakthrough</span>
+                    <br>
+                    <span>Video by StanfordUniversity</span>
+                </figcaption>
+            </div>
+            <div class="story-box">
+                <p class="story">Confused, Dr. Linde called out to his wife, asking if she had ordered anything.</p>
+                <p class="story">“And then I told him that in the beginning we thought that this was a delivery but we did not think that we ordered anything, but I simply forgot that actually I did order it, 30 years ago,” Dr. Linde wrote in an email.</p>
+                <p class="story">Calling from Bonaire, the Dutch Caribbean island, Dr. Linde said he was still hyperventilating. “Having news like this is the best way of spoiling a vacation,” he said.</p>
+                <p class="story">By last weekend, as social media was buzzing with rumors that inflation had been seen and news spread, astrophysicists responded with a mixture of jubilation and caution.</p>
+                <p class="story">Max Tegmark, a cosmologist at M.I.T., wrote in an email, “I think that if this stays true, it will go down as one of the greatest discoveries in the history of science.”</p>
+                <p class="story">John E. Carlstrom of the University of Chicago, Dr. Kovac’s mentor and head of a competing project called the South Pole Telescope, pronounced himself deeply impressed. “I think the results are beautiful and very convincing,” he said.</p>
+                <p class="story">Paul J. Steinhardt of Princeton, author of a competitor to inflation that posits the clash of a pair of universes as the cause of genesis, said that if true, the Bicep result would eliminate his model, but he expressed reservations about inflation.</p>
+                <p class="story">Lawrence M. Krauss of Arizona State and others also emphasized the need for confirmation, noting that the new results exceeded earlier estimates based on temperature maps of the cosmic background by the European Space Agency’s Planck satellite and other assumptions about the universe.</p>
+                <p class="story">“So we will need to wait and see before we jump up and down,” Dr. Krauss said.</p>
+                <p class="story">Corroboration might not be long in coming. The Planck spacecraft will report its own findings this year. At least a dozen other teams are trying similar measurements from balloons, mountaintops and space.</p>
+                <p class="strong">Spirals in the Sky</p>
+                <p class="story">Gravity waves are the latest and deepest secret yet pried out of the cosmic microwaves, which were discovered accidentally by Arno Penzias and Robert Wilson at Bell Labs 50 years ago. They won the Nobel Prize.</p>
+                <p class="story">Dr. Kovac has spent his career trying to read the secrets of these waves. He is one of four leaders of Bicep, which has operated a series of increasingly sensitive radio telescopes at the South Pole, where the thin, dry air creates ideal observing conditions. The others are Clement Pryke of the University of Minnesota, Jamie Bock of the California Institute of Technology and Dr. Kuo of Stanford.</p>
+                <p class="story">“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.</p>
+            </div>
+            <div class="telescope-img">
+                <img src="images/18cosmos-2-jumbo.jpg" alt="Big telescope image">
+            </div>
+            <div class="image-capt">
+                <figcaption class="for-image">
+                    <span class="cap1">The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.</span>
+                    <br>
+                    <span class="cap2">Steffen Richter/Associated Press</span>
+                </figcaption>
             </div>
         </section>
     </main>
