--- a/index.html
+++ b/index.html
@@ -205,6 +205,136 @@
                 </div>
             </div>
         </section>
+
+        <section class="sect-two">
+            <div class="main-col-box">
+                <div class="inner-box">
+                    <h3>More in Space & Cosmos</h3>
+                    <div class="fig-cont">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/spacesuits.jpg" alt="Space Suits">
+                                <figcaption>Ting shen for The New York Times</figcaption>
+                                <span class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</span>
+                                <br>
+                                <span class="fig-date">11h ago</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/shared_mission.jpg" alt="Space Suits">
+                                <figcaption>Alex Gallardo/Associated Press</figcaption>
+                                <span class="fig-desc">After Sparring, NASA and SpaceX Declare a Shared Mission</span>
+                                <br>
+                                <span class="fig-date">Yesterday</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont third">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/climate_change.jpg" alt="Space Suits">
+                                <figcaption>PAID POST: Global Covenant of Mayors</figcaption>
+                                <span class="fig-desc">Mayors and Ministers Form a Superalliance for Climate Action global covenant</span>
+                                <br>
+                                <span class="fig-date">Oct 19</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/female_spacewalk.jpg" alt="Space Suits">
+                                <figcaption>NASA via Associated press</figcaption>
+                                <span class="fig-desc">First All Female Spacewalk is Back On, NASA Says</span>
+                                <br>
+                                <span class="fig-date">Oct 5</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/path_to_space.jpg" alt="Space Suits">
+                                <figcaption>Allison Farrand for The New York Times</figcaption>
+                                <span class="fig-desc">An Astronaut Who Built Path to Space for Other Women</span>
+                                <br>
+                                <span class="fig-date">Oct 2</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont third">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/comet.jpg" alt="Space Suits">
+                                <figcaption>Travis Rector/Gemini Observatory/NSF/AURA</figcaption>
+                                <span class="fig-desc">An Interstellar Comet, in time for the Holidays</span>
+                                <br>
+                                <span class="fig-date">Oct 1</span>
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <aside class="right-col-box">
+                <div class="right-inner-box">
+                    <h3>More Popular</h3>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>He Scoured the Bronx on a Budget. Which Home did He Choose</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>Wegmans Has Come to Brooklyn. Why Are New Yorkers Losing Their Minds?</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>Angry Republicans’ Impeachment Protest Keeps Late Night Laughing</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>Indicted Giuliani Associate Ties Case to Trump</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>Trump’s War on the ‘Deep State’ Turns Against Him</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>Opinion: Pick Trump’s Worst Cabinet Member</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>How Do the New Plant-Based Burgers Stack Up? We Taste-Tested Them</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>De Niro and Pacino Have Always Connected. Just Rarely Onscreen.</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>How an Almost-Divorce Kept Them Together</p>
+                        </a>
+                    </div>
+                    <div class="news-box">
+                        <a href="#">
+                            <p>Carl Safina Is Certain Your Dog Loves You</p>
+                        </a>
+                    </div>
+                </div>
+            </aside>
+        </section>
     </main>
 </body>
 </html>
