editor picks completed

--- a/index.html
+++ b/index.html
@@ -277,6 +277,43 @@
                         </a>
                     </div>
                 </div>
+
+                <div class="inner-box2">
+                    <h3>Editors' Pick</h3>
+                    <div class="fig-cont">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/teen_stars.jpg" alt="Space Suits">
+                                <figcaption>Alexis Gross for The New York Times</figcaption>
+                                <span class="fig-desc">The Future Teen Stars of America Live on TikTok</span>
+                                <br>
+                                <span class="fig-date">Oct 1</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/indian_house.jpg" alt="Space Suits">
+                                <figcaption>Tobias Alexander Harvey</figcaption>
+                                <span class="fig-desc">This Is an Indian House, According to One Architect</span>
+                                <br>
+                                <span class="fig-date">Oct 9</span>
+                            </figure>
+                        </a>
+                    </div>
+                    <div class="fig-cont third">
+                        <a href="#">
+                            <figure class="sect-two-fig">
+                                <img src="images/smell_top.png" alt="Space Suits">
+                                <figcaption>Hilary Swift for The New York Times</figcaption>
+                                <span class="fig-desc">That Smell at the Top of One World Trade? It’s on Purpose</span>
+                                <br>
+                                <span class="fig-date">Aug 7</span>
+                            </figure>
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <aside class="right-col-box">
