--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@
                     <div class="illus col-8">
                         <p><span class="bold">EXPANSION </span>  Returning to our coffee, imagine a single, central pot expanding faster than light and cooling to an even temperature as it expands. That is something like inflation. And the structure of the universe mirrors the froth and foam of the original pot</p>
                     </div>
-                    <div class="figure-text">
-                        <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
-                    </div>
+                </div>
+                <div class="fig-line"></div>
+                <div class="figure-text">
+                    <p>By LARRY BUCHANAN and JONATHAN CORUM</p>
                 </div>
             </div>
             <div class="story-box">
@@ -150,7 +151,7 @@
                 <p class="story">Lawrence M. Krauss of Arizona State and others also emphasized the need for confirmation, noting that the new results exceeded earlier estimates based on temperature maps of the cosmic background by the European Space Agency’s Planck satellite and other assumptions about the universe.</p>
                 <p class="story">“So we will need to wait and see before we jump up and down,” Dr. Krauss said.</p>
                 <p class="story">Corroboration might not be long in coming. The Planck spacecraft will report its own findings this year. At least a dozen other teams are trying similar measurements from balloons, mountaintops and space.</p>
-                <p class="strong">Spirals in the Sky</p>
+                <p class="story strong">Spirals in the Sky</p>
                 <p class="story">Gravity waves are the latest and deepest secret yet pried out of the cosmic microwaves, which were discovered accidentally by Arno Penzias and Robert Wilson at Bell Labs 50 years ago. They won the Nobel Prize.</p>
                 <p class="story">Dr. Kovac has spent his career trying to read the secrets of these waves. He is one of four leaders of Bicep, which has operated a series of increasingly sensitive radio telescopes at the South Pole, where the thin, dry air creates ideal observing conditions. The others are Clement Pryke of the University of Minnesota, Jamie Bock of the California Institute of Technology and Dr. Kuo of Stanford.</p>
                 <p class="story">“The South Pole is the closest you can get to space and still be on the ground,” Dr. Kovac said. He has been there 23 times, he said, wintering over in 1994. “I’ve been hooked ever since,” he said.</p>
@@ -171,7 +172,7 @@
                 <p class="story">Detecting those spirals required measuring infinitesimally small differences in the temperature of the microwaves. The group’s telescope, Bicep2, is basically a giant superconducting thermometer.</p>
                 <p class="story">“We had no expectations what we would see,” Dr. Kovac said.</p>
                 <p class="story">The strength of the signal surprised the researchers, and they spent a year burning up time on a Harvard supercomputer, making sure they had things right and worrying that competitors might beat them to the breakthrough.</p>
-                <p class="strong">A Special Time</p>
+                <p class="story strong">A Special Time</p>
                 <p class="story">The data traced the onset of inflation to a time that physicists like Dr. Guth, staying up late in his Palo Alto house 35 years ago, suspected was a special break point in the evolution of the universe.</p>
                 <p class="story">Physicists recognize four forces at work in the world today: gravity, electromagnetism, and strong and weak nuclear forces. But they have long suspected that those are simply different manifestations of a single unified force that ruled the universe in its earliest, hottest moments.</p>
                 <p class="story">As the universe cooled, according to this theory, there was a fall from grace, like some old folk mythology of gods or brothers falling out with each other. The laws of physics evolved, with one force after another splitting away.</p>
