added bottom navigation and footer

--- a/index.html
+++ b/index.html
@@ -373,6 +373,132 @@
                 </div>
             </aside>
         </section>
+        <section class="section-3">
+            <div class="bottom-header">
+                <div class="bottom-logo">
+                    <img src="images/tnypic.png" alt="NYT-logo">
+                </div>
+                <div class="go-to">
+                    <span class="go-to-link">Go to Home Page »</span>
+                </div>
+            </div>
+            <div class="sections">
+                <section class="small-section">
+                    <h3 class="section-head">NEWS</h3>
+                    <ul class="the-links">
+                        <li><a href="#">Home page</a></li>
+                        <li><a href="#">US</a></li>
+                        <li><a href="#">World</a></li>
+                        <li><a href="#">Politics</a></li>
+                        <li><a href="#">Elections 2020</a></li>
+                        <li><a href="#">New York</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Tech</a></li>
+                        <li><a href="#">Science</a></li>
+                        <li><a href="#">Sports</a></li>
+                        <li><a href="#">Obituaries</a></li>
+                        <li><a href="#">Today's paper</a></li>
+                        <li><a href="#">Corrections</a></li>
+                    </ul>
+                </section>
+                <section class="small-section">
+                    <h3 class="section-head">OPINION</h3>
+                    <ul class="the-links">
+                        <li><a href="#">Today's Opinion</a></li>
+                        <li><a href="#">Op-ed Columnists</a></li>
+                        <li><a href="#">Editorials</a></li>
+                        <li><a href="#">Op-ed Contributors</a></li>
+                        <li><a href="#">Letters</a></li>
+                        <li><a href="#">Sunday review</a></li>
+                        <li><a href="#">video Opinion</a></li>
+                    </ul>
+                </section>
+                <section class="small-section">
+                    <h3 class="section-head">ARTS</h3>
+                    <ul class="the-links">
+                        <li><a href="#">Today’s Arts</a></li>
+                        <li><a href="#">Art & Design</a></li>
+                        <li><a href="#">Books</a></li>
+                        <li><a href="#">Dance</a></li>
+                        <li><a href="#">Movies</a></li>
+                        <li><a href="#">Music</a></li>
+                        <li><a href="#">Pop Culture</a></li>
+                        <li><a href="#">Television</a></li>
+                        <li><a href="#">Theater</a></li>
+                        <li><a href="#">Video: Arts</a></li>
+                    </ul>
+                </section>
+                <section class="small-section">
+                    <h3 class="section-head">LIVING</h3>
+                    <ul class="the-links">
+                        <li><a href="#">Automobiles</a></li>
+                        <li><a href="#">Crossword</a></li>
+                        <li><a href="#">Education</a></li>
+                        <li><a href="#">Food</a></li>
+                        <li><a href="#">Health</a></li>
+                        <li><a href="#">Jobs</a></li>
+                        <li><a href="#">Magazine</a></li>
+                        <li><a href="#">Parenting</a></li>
+                        <li><a href="#">Real Estate</a></li>
+                        <li><a href="#">Style</a></li>
+                        <li><a href="#">T Magazine</a></li>
+                        <li><a href="#">Travel</a></li>
+                        <li><a href="#">Love</a></li>
+                    </ul>
+                </section>
+                <section class="small-section">
+                    <h3 class="section-head">MORE</h3>
+                    <ul class="the-links">
+                        <li><a href="#">Reader Center</a></li>
+                        <li><a href="#">Wirecutter</a></li>
+                        <li><a href="#">Live Events</a></li>
+                        <li><a href="#">The Learning Network</a></li>
+                        <li><a href="#">Tools & Services</a></li>
+                        <li><a href="#">N.Y.C Events Guide</a></li>
+                        <li><a href="#">Multimedia</a></li>
+                        <li><a href="#">Photography</a></li>
+                        <li><a href="#">Video</a></li>
+                        <li><a href="#">Newsletters</a></li>
+                        <li><a href="#">NYT Store</a></li>
+                        <li><a href="#">Times Journeys</a></li>
+                        <li><a href="#">Manage My Account</a></li>
+                    </ul>
+                </section>
+                <section class="small-section">
+                    <h3 class="section-head">SUBSCRIBE</h3>
+                    <ul class="the-links">
+                        <li class="bold"><a href="#">Home Delivery</a></li>
+                        <li class="bold"><a href="#">Digital Subscriptions</a></li>
+                        <li class="bold"><a href="#">Crossword</a></li>
+                        <li class="bold"><a href="#">Cooking</a></li>
+                        <li class="small"><a href="#">Email Newsletters</a></li>
+                        <li class="small"><a href="#">Corporate Subscriptions</a></li>
+                        <li class="small"><a href="#">Education Rate</a></li>
+                        <div class="small-div"></div>
+                        <li class="small"><a href="#">Mobile Applications</a></li>
+                        <li class="small"><a href="#">Replica Edition</a></li>
+                        <li class="small"><a href="#">Espanol</a></li>
+                        <li class="small"><a href="#">中文网</a></li>
+                    </ul>
+                </section>
+            </div>
+        </section>
     </main>
+    <footer class="footer-container">
+        <ul class="footer-list">
+            <li class="footer-navs"><a href="#">© 2019 The New York Times Company</a></li>
+            <li class="footer-navs"><a href="#">Contact Us</a></li>
+            <li class="footer-navs"><a href="#">Work with us</a></li>
+            <li class="footer-navs"><a href="#">Advertise</a></li>
+            <li class="footer-navs"><a href="#">T Brand Studio</a></li>
+            <li class="footer-navs"><a href="#">Your Ad Choices</a></li>
+            <li class="footer-navs"><a href="#">Privacy</a></li>
+            <li class="footer-navs"><a href="#">Terms of Service</a></li>
+            <li class="footer-navs"><a href="#">Terms of Sale</a></li>
+            <li class="footer-navs"><a href="#">Site Map</a></li>
+            <li class="footer-navs"><a href="#">Help</a></li>
+            <li class="footer-navs"><a href="#">Subscriptions</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
