--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                         <li class="small"><a href="#">Corporate Subscriptions</a></li>
                         <li class="small"><a href="#">Education Rate</a></li>
                         <div class="small-div"></div>
-                        <li class="small"><a href="#">Mobile Applications</a></li>
+                        <li class="small acd"><a href="#">Mobile Applications</a></li>
                         <li class="small"><a href="#">Replica Edition</a></li>
                         <li class="small"><a href="#">Espanol</a></li>
                         <li class="small"><a href="#">中文网</a></li>
@@ -500,5 +500,14 @@
             <li class="footer-navs"><a href="#">Subscriptions</a></li>
         </ul>
     </footer>
+    <nav class="bottom-nav">
+        <div class="inner-tush">
+            <p>Access more of The Times by creating a free account or logging in.</p>
+            <div class="exp">
+                <p>Expand</p>
+                <img src="images/up_arrow.svg" alt="UP">
+            </div>
+        </div>
+    </nav>
 </body>
 </html>
