added bottom navbar

--- a/index.html
+++ b/index.html
@@ -502,10 +502,14 @@
     </footer>
     <nav class="bottom-nav">
         <div class="inner-tush">
-            <p>Access more of The Times by creating a free account or logging in.</p>
-            <div class="exp">
-                <p>Expand</p>
-                <img src="images/up_arrow.svg" alt="UP">
+            <div class="inner-el">
+                <div class="pa">
+                    <p>Access more of The Times by creating a free account or logging in.</p>
+                </div>
+                <div class="exp">
+                    <p>Expand</p>
+                    <img src="images/up_arrow.svg" alt="UP">
+                </div>
             </div>
         </div>
     </nav>
