fixed bottom footer to a fixed position

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                     <p>Access more of The Times by creating a free account or logging in.</p>
                 </div>
                 <div class="exp">
-                    <p>Expand</p>
+                    <span>Expand</span>
                     <img src="images/up_arrow.svg" alt="UP">
                 </div>
             </div>
